[package]# Rust Package Manifest
#▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
name = "config-lib"
version = "0.9.7"

# Project Metadata
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
rust-version = "1.75"
edition = "2021"
readme  = "README.md"
publish = true
license = "Apache-2.0 OR MIT"

# links
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
homepage      = "https://github.com/jamesgober/config-lib"
repository    = "https://github.com/jamesgober/config-lib"
documentation = "https://docs.rs/config-lib"


# Project Information
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
description = "Enterprise-grade multi-format configuration library supporting 8 formats (CONF, INI, Properties, JSON, XML, HCL, TOML, NOML) with sub-50ns caching, hot reloading, and comprehensive validation."


# Categories (max 5)
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
categories = [
    "config",
    "parsing",
    "data-structures",
    "development-tools",
]

# Keywords (max 5)
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
keywords = [
    "config",
    "parser",
    "toml",
    "multi-format",
    "hot-reload",
]

# Exclude files from the package
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
exclude = [
    ".github/",  # GitHub metadata 
    "benches/",  # Benchmarking code
    "docs/",     # Documentation
    "dev/",      # Development utilities
]


# Authors
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
authors = [
    "James Gober <code@jamesgober.dev>"
]




[features]
#▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐

# Default features
#
# v0.9.7: NOML and TOML moved out of the default set. They remain
# available as opt-in features, but the default build no longer pulls
# in the pre-1.0 `noml` crate. This is what unblocks the MSRV-1.75
# commitment in the 1.0 stability contract — see `docs/STABILITY-1.0.md`
# for the full rationale.
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
default = ["conf", "hot-reload"]

# Config Formats
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
conf = []                              # CONF format parsing (built-in)
noml = ["dep:noml"]                    # NOML format parsing
toml = ["dep:noml"]                    # TOML format parsing via NOML
json = ["dep:serde_json"]              # JSON format parsing

# Additional Features
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
async       = ["dep:tokio", "noml?/async"]   # Enable async file operations + NOML async
chrono      = ["dep:chrono", "noml?/chrono"] # Enable DateTime support + NOML chrono
schema      = []                             # Enable schema validation
validation  = ["dep:regex"]                  # Enable configuration validation rules
hot-reload  = ["dep:notify"]                 # Event-driven file watching via `notify`
                                             #   (inotify / FSEvents / RDCW).
                                             #   Without this feature the watcher
                                             #   falls back to a polling thread.

# Enterprise Format Support
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
xml          = ["dep:quick-xml"]       # XML format parsing (zero-copy)
hcl          = []                      # HashiCorp Configuration Language (basic)
env-override = []                      # Smart environment variable overrides





[dependencies]
#▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐

# Core Dependencies
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
thiserror = "1.0"                      # Error handling
serde = { version = "1.0", features = ["derive"] }  # Serialization

# Optional Dependencies
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_json = { version = "1.0", optional = true }
regex = { version = "1.0", optional = true }

# Enterprise Format Parsers
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
quick-xml = { version = "0.31", optional = true }   # High-performance XML parser

# Filesystem watching (Phase 0.9.6 — event-driven hot reload).
# `notify` is a cross-platform wrapper over inotify (Linux), FSEvents
# (macOS), and ReadDirectoryChangesW (Windows). Pulled in by the
# `hot-reload` feature.
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
notify = { version = "6", optional = true }

# NOML Language Library (Published Crate)
#
# Pinned EXACTLY rather than caret-bounded. `noml` is pre-1.0 and its
# SemVer guarantees do not yet apply, so a `0.9.1` release could
# introduce changes that this crate has not validated. Bumping the
# pin is a deliberate maintainer action, not a silent `cargo update`.
# Documented in `docs/STABILITY-1.0.md`.
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
noml = { version = "=0.9.0", optional = true, features = [] }





[dev-dependencies]
#▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
#☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐☐
tokio-test = "0.4"                     # Async testing utilities
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"





[[bench]]
#▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
name = "enterprise_benchmarks"
harness = false





# Optimized Release Profile for Maximum Performance

[profile.release]
#▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
opt-level = 3           # Maximum optimization level
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Smaller binary, better performance
overflow-checks = false # Disable overflow checks in release
debug = false           # No debug info for smaller binary

[profile.bench]
#▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▒░
inherits = "release"    # Benchmarks use release optimizations
debug = true            # Keep debug info for profiling